GNOME Bugzilla – Bug 754523
mssdemux: fragment download errors during live playback
Last modified: 2015-09-30 09:07:27 UTC
Sometimes the demuxer tries to download fragments with an invalid start_time. Patch incoming :)
Created attachment 310589 [details] [review] mssdemux: always use timescale for gst timestamp calculation Not doing this can lead the demuxer to attempt downloading fragments for an invalid start time. The server would then send a HTTP Precondition failed error, the demuxer would try some more times to download the invalid fragment and eventually error out.
Review of attachment 310589 [details] [review]: Looks good, thanks!
Can you please push this on my behalf? I don't have git push access.
Thanks, pushed: commit 5d4388bf9eb82b107952fc655a8a135236b8eee3 Author: Philippe Normand <philn@igalia.com> Date: Thu Sep 3 15:11:00 2015 +0200 mssdemux: always use timescale for gst timestamp calculation Not doing this can lead the demuxer to attempt downloading fragments for an invalid start time. The server would then send a HTTP Precondition failed error, the demuxer would try some more times to download the invalid fragment and eventually error out. https://bugzilla.gnome.org/show_bug.cgi?id=754523 Also picked into 1.6 branch.